--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.29.1",
     "jimp": "^0.16.1",
     "quick.db": "^7.1.3",
-    "snekfetch": "^4.0.4"
+    "snekfetch": "^4.0.4",
+    "canvas": "^2.8.0"
   },
   "engines": {
     "node": "12.x"
