--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jimp": "^0.16.1",
     "quick.db": "^7.1.3",
     "snekfetch": "^4.0.4",
-    "canvas": "^2.8.0"
+    "canvas": "^2.8.0",
+    "plasma-db": "^1.0.0"
   },
   "engines": {
     "node": "12.x"
