--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "quick.db": "^7.1.3",
     "snekfetch": "^4.0.4",
     "canvas": "^2.8.0",
-    "plasma-db": "^1.0.0"
+    "plasma-db": "^1.0.0",
+    "discord-xp": "^1.1.16",
+    "discord-canvas": "^1.3.2"
   },
   "engines": {
     "node": "12.x"
