--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "canvas": "^2.8.0",
     "plasma-db": "^1.0.0",
     "discord-xp": "^1.1.16",
-    "discord-canvas": "^1.3.2"
+    "discord-canvas": "^1.3.2",
+    "pretty-ms": "^7.0.1"
   },
   "engines": {
     "node": "12.x"
